--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "music163": "~0.1.0",
     "hyperquest": "~0.2.0",
     "player": "~0.1.1",
-    "minimist": "0.0.7"
+    "minimist": "0.0.7",
+    "mkdirp": "~0.3.5"
   }
 }
