--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "music163": "~0.1.0",
     "hyperquest": "~0.2.0",
-    "player": "~0.1.1",
     "minimist": "0.0.7",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "lame": "~1.0.3",
+    "speaker": "0.0.10"
   }
 }
