add style for dispalying

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "minimist": "0.0.7",
     "mkdirp": "~0.3.5",
     "lame": "~1.0.3",
-    "speaker": "0.0.10"
+    "speaker": "0.0.10",
+    "chalk": "~0.4.0"
   }
 }
